--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 #wrap {
     width: 100%;
+    overflow: hidden;
 }
 #wrap .btn {
     z-index: 9999;
     position: fixed;
     top: 83%;
     right: 3%;
-
 }
 #wrap .btn button{
     width: 100px;
@@ -38,7 +38,7 @@
 .header_top ul li {
     padding-top: 10px;
     height: 40px;
-    padding-left: 25px;
+    margin-left: 25px;
     font-size: 13px;
     font-weight: 600;
     cursor: pointer;
@@ -226,20 +226,21 @@
 .fade1 .fade_left img {
     width: 100px;
     float: left;
-    margin-top: 70px;
+    margin: 70px 0 0 0;
 }
 .fade1 .fade_left span {
     float: right;
-    padding: 90px 70px 0 0;
+    margin: 90px 70px 0 0;
     color: #ccc;
     font-weight: 600;
+    font-size: 14px;
     background-color: #fff;
 }
 
 .fade1 .fade_right {
     width: 840px;
     height: 900px;
-    float: right;
+    float: left;
 }
 .fade1 .fade_right img {
     width: 100%;
@@ -279,22 +280,22 @@
 }
 .fade2 .fade_left span {
     float: right;
-    padding: 90px 70px 0 0;
+    margin: 90px 70px 0 0;
     color: #ccc;
     font-weight: 600;
+    font-size: 14px;
     background-color: #fff;
 }
 
 .fade2 .fade_right {
     width: 840px;
     height: 900px;
-    float: right;
+    float: left;
 }
 .fade2 .fade_right img {
     width: 100%;
     height: 900px;
     margin-top: 40px;
-    background-color: antiquewhite;
 }
 
 .fade3 {
@@ -328,22 +329,22 @@
 }
 .fade3 .fade_left span {
     float: right;
-    padding: 90px 70px 0 0;
+    margin: 90px 70px 0 0;
     color: #ccc;
     font-weight: 600;
+    font-size: 14px;
     background-color: #fff;
 }
 
 .fade3 .fade_right {
     width: 840px;
     height: 900px;
-    float: right;
+    float: left;
 }
 .fade3 .fade_right img {
     width: 100%;
     height: 900px;
     margin-top: 40px;
-    background-color: antiquewhite;
 }
 
 .fade4 {
@@ -377,22 +378,22 @@
 }
 .fade4 .fade_left span {
     float: right;
-    padding: 90px 70px 0 0;
+    margin: 90px 70px 0 0;
     color: #ccc;
     font-weight: 600;
+    font-size: 14px;
     background-color: #fff;
 }
 
 .fade4 .fade_right {
     width: 840px;
     height: 900px;
-    float: right;
+    float: left;
 }
 .fade4 .fade_right img {
     width: 100%;
     height: 900px;
     margin-top: 40px;
-    background-color: antiquewhite;
 }
 
 .fade5 {
@@ -426,22 +427,22 @@
 }
 .fade5 .fade_left span {
     float: right;
-    padding: 90px 70px 0 0;
+    margin: 90px 70px 0 0;
     color: #ccc;
     font-weight: 600;
+    font-size: 14px;
     background-color: #fff;
 }
 
 .fade5 .fade_right {
     width: 840px;
     height: 900px;
-    float: right;
+    float: left;
 }
 .fade5 .fade_right img {
     width: 100%;
     height: 900px;
     margin-top: 40px;
-    background-color: antiquewhite;
 }
 
 /* Task chair */
@@ -474,6 +475,7 @@
 
 .con1_left {
     float: left;
+    width: 600px;
     text-align: center;
 }
 .con1_left_1 {
@@ -503,6 +505,7 @@
 
 .con1_right {
     float: right;
+    width: 600px;
     text-align: center;
 }
 .con1_right_1 {
@@ -696,6 +699,7 @@
 
 /* more */
 #content4 {
+    width: 100%;
     height: 900px;
     margin: 0 auto;
     background-color: #F5F5F5;
@@ -719,7 +723,6 @@
 .news ul li h3 {
     width: 150px;
     height: 60px;
-    padding: 18px 0 0 50px;
     box-sizing: border-box;
     font-size: 18px;
     color: #fff;
@@ -758,6 +761,7 @@
 }
 .sns div img {
     width: 50px;
+    border-radius: 50%;
     float: left;
 }
 .sns div span {
@@ -800,6 +804,7 @@
     padding-bottom: 30px;
 }
 .blog_left p {
+    font-size: 14px;
     padding-bottom: 30px;
 }
 .blog_left a {
@@ -811,7 +816,6 @@
 .blog_right {
     width: 650px;
     height: 360px;
-    background-color: #ccc;
 }
 .blog_right img {
     width: 100%;
@@ -896,7 +900,6 @@
 }
 .footer_right_list li ul li {
     display: block;
-
 }
 .footer_right_list li ul li h4 {
     padding-bottom: 20px;
@@ -908,4 +911,5 @@
 .footer_right_list li ul li p {
     line-height: 30px;
     cursor: pointer;
+    font-size: 14px;
 }
