--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@
     color: black;
     font-weight: 999;
     height: 40px;
+    font-size: 14px;
 }
 .nav li a:hover{
     color: blue;
@@ -562,6 +563,7 @@
 }
 
 .con2_box {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -644,6 +646,7 @@
 }
 
 .con3_box {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -731,7 +734,7 @@
 .news ul li p {
     margin-left: 260px;
     padding: 18px 20px 0 0;
-    font-weight: 900 ;
+    font-weight: 900;
 }
 .news ul li span {
     padding-top: 18px;
